# SOCUtils

./: CMakeLists.txt  README.md
cmake/: HunterGate.cmake  Toolchain-xilinx-mpsoc-ultrascale.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt  network_manager.cpp  network_manager.hpp
src/messages/: CMakeLists.txt  system.capnp
src/test/: CMakeLists.txt  NetworkManagerTest.cpp  network_manager_test.cpp
src/utils/: CMakeLists.txt  search_and_replace.cpp  search_and_replace.hpp
