cmake_minimum_required(VERSION 3.0)
project(SOCNetworkManager)
set(CMAKE_CXX_STANDARD 14)
find_package(CapnProto CONFIG REQUIRED)
capnp_generate_cpp(systemSources systemHeaders system.capnp)
add_library(system ${systemSources} ${systemHeaders})
target_link_libraries(system PRIVATE CapnProto::capnp)
target_include_directories(system PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
install (TARGETS system  DESTINATION lib)